--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
                 <div class="box2">
                     <select class="btn btn-secondary form-select form-select-lg mb-3" aria-label=".form-select-lg example" id="voice-select" name="chosen_voice" required>
                         <option value="en-us" selected>English</option>
-                        <option value="es">Spanish</option>
+                        <option value="es">Tieng viet</option>
                     </select>
                 </div>
 
@@ -89,7 +89,7 @@
     {% block body %} {% endblock %}
 
     <footer>
-        <p>ListenPDF Nhóm 9</a></p>
+        <p>ListenPDF Nhóm 1 <br> Vũ Viết Thương: 22010238 <br> Đỗ Sỹ Chiến: 22010238 <br></a></p>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
